--- a/notebooks/python_lists.ipynb
+++ b/notebooks/python_lists.ipynb
@@ -2,7 +2,9 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "2kYNgL0TjVbm"
+   },
    "source": [
     "# Lists in Python\n",
     "\n",
@@ -11,7 +13,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "OqaPo9U3jVbn"
+   },
    "source": [
     "## Creating and modifying lists\n",
     "\n",
@@ -21,7 +25,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "if4TJycwjVbo"
+   },
    "outputs": [],
    "source": [
     "x = [2.0, 1.3e-2, 'hello', 'B']\n",
@@ -31,7 +37,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "E9Hq626tjVbp"
+   },
    "source": [
     "Lists can also be empty.  Below we create an empty list and assign it to the variable `a_list`."
    ]
@@ -39,7 +47,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "I0a1yXvNjVbp"
+   },
    "outputs": [],
    "source": [
     "a_list = []\n",
@@ -49,7 +59,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "1VcSdLRtjVbq"
+   },
    "source": [
     "We can append a value to the end of a list by simply using the \"append\" member function of the list.  That is, to append the value `4.8` to the list `x` that we created above, we simply write:"
    ]
@@ -58,6 +70,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "id": "IozRLTwWjVbq",
     "scrolled": true
    },
    "outputs": [],
@@ -69,7 +82,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "HQ1nL5rMjVbr"
+   },
    "source": [
     "We can perform this process repeatedly to successively add items to a list.  In the example below, we build upon the empty list `a_list` that we created above:"
    ]
@@ -77,7 +92,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "NjT9hqOojVbr"
+   },
    "outputs": [],
    "source": [
     "a_list.append('a')\n",
@@ -91,7 +108,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "933n2dXOjVbs"
+   },
    "source": [
     "Finally, we note that there are functions in Python that automatically generate lists for us.  An important function is `range`.  This function creates an `iterator` for us, which we can easily convert to a list, using the function `list`:"
    ]
@@ -99,7 +118,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "ojtNj1gUjVbt"
+   },
    "outputs": [],
    "source": [
     "b_list = range(10)\n",
@@ -115,7 +136,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "HqKhEtODjVbt"
+   },
    "source": [
     "## Accessing lists\n",
     "\n",
@@ -125,7 +148,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "kNSdipE_jVbt"
+   },
    "outputs": [],
    "source": [
     "print(x)\n",
@@ -136,7 +161,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "qNjQEexbjVbu"
+   },
    "source": [
     "Note that we can conveniently access elements from the back of the list using negative numbers.  The last element of a list is associated with the integer `-1`, the second to last element is associated with `-2`, etc."
    ]
@@ -144,7 +171,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "MnY3MzbwjVbu"
+   },
    "outputs": [],
    "source": [
     "print(x)\n",
@@ -155,7 +184,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "KT87YUrmjVbu"
+   },
    "source": [
     "## Unpacking lists\n",
     "\n",
@@ -165,7 +196,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "0tkIxpYijVbu"
+   },
    "outputs": [],
    "source": [
     "print(x)\n",
@@ -181,7 +214,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "SlHrroQyjVbu"
+   },
    "source": [
     "Note that the number of variables on the left of the equal sign needs to be the same as the number of item in the list on the right, otherwise an error will occur"
    ]
@@ -189,7 +224,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "i96yrC4HjVbu"
+   },
    "outputs": [],
    "source": [
     "A, B = x\n"
@@ -197,7 +234,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "B9ncwb_njVbv"
+   },
    "source": [
     "We can remedy this by adding an asterix `*` in front of the final variable on the left.  This puts the rest of the items of the list into the final variable."
    ]
@@ -205,7 +244,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "a9FTtKRsjVbv"
+   },
    "outputs": [],
    "source": [
     "A, B, *C = x\n",
@@ -217,7 +258,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "E6Y4UytzjVbv"
+   },
    "source": [
     "## List functions\n",
     "\n",
@@ -227,7 +270,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "arJ7Fry5jVbv"
+   },
    "outputs": [],
    "source": [
     "x_list = list(range(10))\n",
@@ -242,7 +287,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "2gUq-3lKjVbv"
+   },
    "source": [
     "## List comprehensions\n",
     "\n",
@@ -252,7 +299,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "ec-rcedFjVbv"
+   },
    "outputs": [],
    "source": [
     "x_list = range(10)\n",
@@ -264,44 +313,77 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "jj1ihk6XjVbw"
+   },
    "source": [
     "## Looping\n",
     "\n",
     "Probably one of the most important aspects of lists is that it allows us to perform repetitive operations for each item in the list.  This is known as a loop.  \n",
     "\n",
-    "As an example, let us assume that we have a four component system, and the mass of each component is kept in the variable `mass_list`.  If we want to know the total mass of the system, we just need to sum over all the elements of `mass_list`.  We can do this in a loop:"
+    "As an example, let us assume that we have a four component system, and the mass of each component is kept in the variable `mass_list`. We can access each component in the list sequentially by using a loop. The `for` statement means that we iterate over every element of `mass_list`, placing each element in the variable `mass`."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "CLB9XkGG6YHl"
+   },
+   "outputs": [],
+   "source": [
+    "mass_list = [2.3, 6.2, 2.8, 5.6]\n",
+    "element = 0\n",
+    "\n",
+    "for mass in mass_list:\n",
+    "    print(element, mass)\n",
+    "    element += 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "m5YeZJwP6eVU"
+   },
+   "source": [
+    "We can also perform operations inside of the loop. If we want to know the total mass of the system, we just need to sum over all the elements of `mass_list`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "FFlIex8_jVbw"
+   },
    "outputs": [],
    "source": [
     "mass_list = [2.3, 6.2, 2.8, 5.6]\n",
     "\n",
     "total_mass = 0.0\n",
     "for mass in mass_list:\n",
+    "    print(f'Cummulative mass: {total_mass}')\n",
     "    total_mass += mass\n",
     "    \n",
-    "print(total_mass)\n",
-    "\n"
+    "print(f'Total mass: {total_mass}')"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "Ux_WvIuvjVbw"
+   },
    "source": [
-    "The `for` statement means that we iterate over every element of `mass_list`, placing each element in the variable `mass`.  We initialize the variable `total_mass` to zero, and in the loop, we increment its value by the value of each item in the list (i.e. the value of `mass`).  Note that the symbol `+=` means we increment the value of the variable on the left of the symbol, by the value of the variable on the right.\n",
+    "  We initialize the variable `total_mass` to zero, and in the loop, we increment its value by the value of each item in the list (i.e. the value of `mass`).  Note that the symbol `+=` means we increment the value of the variable on the left of the symbol, by the value of the variable on the right. i.e. `total_mass += mass` is equivalent to `total_mass = total_mass + mass`.\n",
     "\n",
-    "We can also use loops to construct lists.  In the code below, we construct a list of mass fractions of each of the species."
+    "Additionally, we can also use loops to construct lists.  In the code below, we construct a list of mass fractions of each of the species."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "suf00FxQjVbw"
+   },
    "outputs": [],
    "source": [
     "mass_frac = []\n",
@@ -312,7 +394,212 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "aGzZ8MTu_kWf"
+   },
+   "source": [
+    "`mass_frac` is initialised as an empty list. With each iteration of the loop, a component of `mass_list` is assigned to the variable `x`, `x` is then used to calculate the respective mass fraction. The calculated result is then added to the end of the list.\\\n",
+    "\\\n",
+    "We can confirm the result is correct by summing the mass fractions in `mass_frac`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "PObTjhYyBBnH"
+   },
+   "outputs": [],
+   "source": [
+    "print(sum(mass_frac))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "hLkg6CqAcgrL"
+   },
+   "source": [
+    "## Looping with multiple lists\n",
+    "Python's `zip()` function allows for the simultaneous iteration of multiple lists. `zip()` takes in two or more `list` arguements, and returns a new list, whose elements comprise of the pairing of the input lists. For example:  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "aQqfR48rfl_U"
+   },
+   "outputs": [],
+   "source": [
+    "list_1 = [1, 3, 5]\n",
+    "list_2 = [2, 4, 6]\n",
+    "\n",
+    "print(list(zip(list_1, list_2)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "SrNUZM-SgKOs"
+   },
+   "source": [
+    "Note that if the input arguements are lists of different sizes, the returned list will have size equal to the smallest inputted list, the 'extra' elements will be ignored. In practise, `zip()` is very useful when multiple lists are used within the same loop\n",
+    "\n",
+    "Consider the folllwing table of materials, if we want to calculate the density of each material, we can do so with a loop.\n",
+    "\n",
+    "| Material | Mass  | Volume           |\n",
+    "|:--- | --- | --- |\n",
+    "|             |kg          | m$^3$ |\n",
+    "| Water     | 837 |       0.84 |\n",
+    "| Ethanol  | 205 |       0.26 |\n",
+    "| Steel     | 629 |       0.08 |"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "Lc8BK5gMhlht"
+   },
+   "outputs": [],
+   "source": [
+    "mass_list = [837, 205, 629]\n",
+    "volume_list = [0.84, 0.26, 0.08]\n",
+    "\n",
+    "density_list =[]\n",
+    "for mass, volume in zip(mass_list, volume_list):\n",
+    "  density_list.append(mass/volume)\n",
+    "\n",
+    "print(density_list)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "oUu_8CTR2j8Y"
+   },
+   "source": [
+    "With each iteration of the loop, a component of `mass_list` and its corresponding component in `volume_list`, is assigned to `mass` and `volume` respectively, from which the density is calculated and added to the bottom of `density_list`. \n",
+    "\n",
+    "Alternatively an iterable index, a list of integers that corresponds to a \n",
+    "position in a list, can be used to access elements sequentially. Returning to the previously seen problem, it can also be solved as such:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "90_IhB4Y4aiB"
+   },
+   "outputs": [],
+   "source": [
+    "mass_list = [837, 205, 629]\n",
+    "volume_list = [0.84, 0.26, 0.08]\n",
+    "\n",
+    "density_list =[]\n",
+    "for index in range(len(mass_list)):\n",
+    "  density_list.append(mass_list[index] / volume_list[index])\n",
+    "\n",
+    "print(density_list)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "cktSgYLS4tR2"
+   },
+   "source": [
+    "`len()` is a function that returns the size of a list. While `range()` returns a sequence of numbers (starting at 0), with size equal to its input. In this scenario `len(mass_list)` would give the integer `3`, consequently `range(len(mass_list))` would give the list `[0, 1, 2]`. Each element of the aforementioned list would then be assigned to the variable `index` and used to access elements in `mass_list` and `volume_list`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "asf9E_-Dd3zG"
+   },
+   "source": [
+    "###Practise Exercises\n",
+    "**Q1**. Calculate the sum of integers from 1 to 100, i.e.\n",
+    "\\begin{equation}\n",
+    "  = 1 + 2 + 3.... +99 + 100\n",
+    "\\end{equation}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "XWGSW2-Hmdtw"
+   },
+   "source": [
+    "**Q2**. Returning to the the same exercise from the previous notebook, complete the exercise by utilising lists and loops.\n",
+    "\n",
+    "Calculate and print the heat of combustion for 100.0g of propanol, given the following heats of formation:\n",
+    "\n",
+    "| Compound | ΔH$^o$$_f$ (kJ mol$^{-1}$) |\n",
+    "|:---|---|\n",
+    "| CO$_{2(g)}$    | -393.5 |\n",
+    "|H$_2$O$_{(l)}$| -285.86|\n",
+    "|C$_3$H$_7$OH$_{(g)}$|-303.0|\n",
+    "\n",
+    "**Hint**: create a list for both the heats of formation, and the coefficients of each compound."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "gjqtkEtvgC6q"
+   },
+   "source": [
+    "**Solutions to practise exercises.**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "QPeo1hsRedf6"
+   },
+   "outputs": [],
+   "source": [
+    "sum = 0\n",
+    "for i in range(100):\n",
+    "  sum +=i+1\n",
+    "print(sum)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "UaOd7cCknOZo"
+   },
+   "outputs": [],
+   "source": [
+    "prop_mass = 100 \n",
+    "prop_mw = 60 \n",
+    "\n",
+    "heats = []\n",
+    "heats.append(-393.5) \n",
+    "heats.append(-285.86)\n",
+    "heats.append(-303.0)\n",
+    "\n",
+    "coeffs = [3, 4, -1]\n",
+    "\n",
+    "combust_heat_permole = 0\n",
+    "for heat, coeff in zip(heats, coeffs):\n",
+    "  combust_heat_permole += heat*coeff\n",
+    "\n",
+    "combust_heat = combust_heat_permole * prop_mass / prop_mw\n",
+    "\n",
+    "print(f'The heat of combustion for {prop_mass}g of propanol is {combust_heat:.2f}kJ/mol')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "UpArs9gjjVbw"
+   },
    "source": [
     "### Conclusion\n",
     "\n",
@@ -321,6 +608,10 @@
   }
  ],
  "metadata": {
+  "colab": {
+   "name": "python_lists.ipynb",
+   "provenance": []
+  },
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -336,9 +627,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 4
+ "nbformat_minor": 1
 }
