--- a/notebooks/python_plotting.ipynb
+++ b/notebooks/python_plotting.ipynb
@@ -2,9 +2,12 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "croFjsVbDSOC"
+   },
    "source": [
     "# Plotting with Python\n",
+    "In the [previous notebook](python_numpy.ipynb), we explored the python library Numpy. In this notebook, we will cover the Matplotlib.\n",
     "\n",
     "The library Matplotlib enables us to create graphs to visualize data.\n",
     "To see some examples of the types of figures that we can create using\n",
@@ -16,7 +19,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "4-_p7qMTDSOF"
+   },
    "source": [
     "## Importing the library\n",
     "\n",
@@ -26,7 +31,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "P8vRM_63DSOF"
+   },
    "outputs": [],
    "source": [
     "from matplotlib import pyplot as plt\n",
@@ -38,7 +45,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "vk5_tqlkDSOG"
+   },
    "source": [
     "Either of the three ways of importing the library will allow us to start accessing functions in `matplotlib.pylab`.\n",
     "\n"
@@ -46,7 +55,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "f6J4m2idDSOG"
+   },
    "source": [
     "To access members of the pyplot module, we just prepend the nickname followed by a period to the function.  For exmple, to acces the `plot` function from `plt` we would write `plt.plot`.\n",
     "\n",
@@ -55,7 +66,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "CoMZeP8pDSOG"
+   },
    "source": [
     "## Plotting a simple figure\n",
     "\n",
@@ -67,7 +80,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "ALy5eRE0DSOH"
+   },
    "outputs": [],
    "source": [
     "plt.plot([1, 2, 3], [1.5, 2.5, 3.5])\n",
@@ -80,7 +95,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "aQI2J6BTDSOH"
+   },
    "source": [
     "The function `plot` sets up the graph, while the function `show` displays it.  The default is to give a simple line plot.\n",
     "\n",
@@ -91,6 +108,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "id": "cxfml2AvDSOI",
     "scrolled": true
    },
    "outputs": [],
@@ -105,7 +123,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "aqStA-HCDSOI"
+   },
    "source": [
     "The function `plot` requires are two lists of the same length that give the $x$- and $y$-coordinates of the data.  It does not care how the lists are generated.  As a more complicated example, we can plot the $\\sin$ and $\\cos$ functions from `numpy`.\n",
     "\n"
@@ -114,7 +134,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "DrbPM5qkDSOI"
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -136,11 +158,22 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "xZrv6FkVGNX9"
+   },
+   "source": [
+    "For more information on customising plots, see the [pyplot.plot](https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.plot.html) documentation page."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "RUDrmdD4DSOI"
+   },
    "source": [
     "### Shomate equation\n",
     "\n",
-    "We are not limited to plotting library functions.  As a small example of what you can do in `matplotlib`, let's plot the specific heat of nitrogen from the [previous notebook](./python_conditionals.ipynb) on conditionals.\n",
+    "We are not limited to plotting library functions.  As a small example of what you can do in `matplotlib`, let's plot the specific heat of nitrogen.\n",
     "\n",
     "The Shomate equation gives the molar heat capacity as\n",
     "\\begin{align*}\n",
@@ -152,93 +185,89 @@
     "\n",
     "The parameters of the Shomate equation for nitrogen are given below (taken from the [NIST webbook](https://webbook.nist.gov/cgi/cbook.cgi?ID=C7727379&Type=JANAFG&Table=on#JANAFG)):\n",
     "\n",
-    "| Temperature / K | $100.$ - $500.$ | $500.$ - $2000.$ | $2000.$ - $6000.$ |\n",
-    "|:--- | ---:| ---:| ---:|\n",
-    "| $A$             |   $ 28.98641$ |    $ 19.50583$ |     $ 35.51872$ |\n",
-    "| $B$             |   $ 1.853978$ |    $ 19.88705$ |     $ 1.128728$ |\n",
-    "| $C$             |   $-9.647459$ |    $-8.598535$ |     $-0.196103$ |\n",
-    "| $D$             |   $ 16.63537$ |    $ 1.369784$ |     $ 0.014662$ |\n",
-    "| $E$             |   $ 0.000117$ |    $ 0.527601$ |     $-4.553760$ |"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_Cp(T):\n",
-    "\n",
-    "    # Get shomate coefficients from the NIST data, depending on temperature\n",
-    "    \n",
-    "    # Could use a range check here\n",
-    "    if T >= 100.0 and T <= 500.0:\n",
-    "        A =  28.98641\n",
-    "        B =  1.853978\n",
-    "        C = -9.647459\n",
-    "        D =  16.63537\n",
-    "        E =  0.000117\n",
-    "    elif 500.0 < T <= 2000.0:\n",
-    "        A =  19.50583\n",
-    "        B =  19.88705\n",
-    "        C = -8.598535\n",
-    "        D =  1.369784\n",
-    "        E =  0.527601\n",
-    "    elif 2000.0 < T <= 6000.0:\n",
-    "        A =  35.51872\n",
-    "        B =  1.128728\n",
-    "        C = -0.196103\n",
-    "        D =  0.014662\n",
-    "        E = -4.553760\n",
-    "    else:\n",
-    "        raise Exception('error: Temperature out of range')\n",
-    "\n",
-    "    t = T / 1000.0\n",
-    "    Cp = A + B*t + C*t**2 + D*t**3 + E / t**2\n",
-    "\n",
-    "    return Cp"
+    "| Temperature / K | $100.$ - $500.$ |\n",
+    "|:--- | ---:| \n",
+    "| $A$             |   $ 28.98641$ | \n",
+    "| $B$             |   $ 1.853978$ | \n",
+    "| $C$             |   $-9.647459$ | \n",
+    "| $D$             |   $ 16.63537$ | \n",
+    "| $E$             |   $ 0.000117$ |"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "iGmUxwwwTEA3"
+   },
    "source": [
-    "To plot this function, we'll need some $x$ data, and some $y$ data. The $x$ data will be the temperature, and $y$ are the $C_p$ values for the temperatures.\n",
-    "\n",
-    "To generate a list of temperatures, we can use the `range` function. This function takes in up to three arguments: the first is the starting value, the second is the exclusive end (i.e. the range will stop one step before this value), and the final value is the step."
+    "Firstly we define our constants."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "id": "OeBbNFTtDSOJ"
    },
    "outputs": [],
    "source": [
-    "T = list(range(100, 6000, 100))\n",
-    "print(T)"
+    "A =  28.98641\n",
+    "B =  1.853978\n",
+    "C = -9.647459\n",
+    "D =  16.63537\n",
+    "E =  0.000117"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "hSWyzhGKDSOJ"
+   },
    "source": [
-    "Now for $y$ ($C_p$) we can use a lsit comprehension:"
+    "To plot this function, we'll need some $x$ data, and some $y$ data. The $x$ data will be the temperature, and $y$ are the $C_p$ values for the temperatures.\n",
+    "\n",
+    "To generate a list of temperatures, we can use the `arange` function from numpy. This function takes in up to three arguments: the first is the starting value, the second is the exclusive end (i.e. the range will stop one step before this value), and the final value is the step size."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "q1_xbLXKDSOK",
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "Cp = [get_Cp(Ti) for Ti in T]"
+    "T_list = np.arange(100.0, 500.0, 1.0)\n",
+    "print(T_list)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "O1lLcWsBDSOK"
+   },
+   "source": [
+    "Now for $y$ ($C_p$) we can use a list comprehension:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "_V-Z2VZVDSOK"
+   },
+   "outputs": [],
+   "source": [
+    "t_list = [T / 1000.0 for T in T_list]\n",
+    "Cp_list = [A + B*t + C*t**2 + D*t**3 + E / t**2 for t in t_list]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "OUTYV04aDSOK"
+   },
    "source": [
     "And finally to plotting. We can pass extra options to the plot function to tell it how to format the line. The first argument following the $x$ and $y$ values is a string defining the line and marker style (and optionally the colour too)."
    ]
@@ -247,41 +276,41 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "id": "LSBJt-pfDSOL",
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "plt.plot(T, Cp, '.--', color='red')\n",
+    "plt.plot(T_list, Cp_list, '.--', color='red')\n",
     "\n",
     "# -- means dashed line\n",
     "# . means small circle markers\n",
     "# default is solid line no marker\n",
     "\n",
-    "plt.xlabel('Temperature, $\\\\rm ^\\\\circ{}C$')\n",
-    "plt.ylabel('Specific Heat Capacity, $\\\\rm J mol^{-1} K^{-1}$')\n",
+    "plt.xlabel('Temperature / K')\n",
+    "plt.ylabel(r'Specific Heat Capacity / ${\\rm J mol^{-1} K^{-1}}$')\n",
     "\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "1wWkRMVoDSOL"
+   },
    "source": [
     "### Conclusion\n",
     "\n",
     "In this notebook we've introduced the concept of importing a package into a Python script, as well as briefly discussed using `matplotlib` to plot data.  If you are interested in learning more, see [here](https://matplotlib.org/tutorials/introductory/pyplot.html) for a\n",
     "a more detailed tutorial."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
+  "colab": {
+   "name": "python_plotting.ipynb",
+   "provenance": []
+  },
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -297,9 +326,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 4
+ "nbformat_minor": 1
 }
