updates to tutorial 1

--- a/tutorials/tutorialS1_1.ipynb
+++ b/tutorials/tutorialS1_1.ipynb
@@ -54,12 +54,12 @@
    "metadata": {},
    "source": [
     "A projectile initially located at the origin has an initial speed\n",
-    "$v=10\\,{\\rm m\\,s}^{-1}$ directed at an angle of $30^\\circ$ from the\n",
-    "horizontal.  It travels a gravitational field $g=9.81\\,{\\rm\n",
+    "$v_0=10\\,{\\rm m\\,s}^{-1}$ directed at an angle of $\\theta=30^\\circ$\n",
+    "from the horizontal.  It travels a gravitational field $g=9.81\\,{\\rm\n",
     "m\\,s}^{-2}$ which points in the negative $y$-direction.\n",
     "\n",
     "1. Write an equation for how the $x$- and $y$-coordinates of the\n",
-    "   particle change depend on time.\n",
+    "   particle change depend on time $t$.\n",
     "\n",
     "2. When will the projectile strike the ground, which is located at\n",
     "   $y=0$?\n",
