--- a/tutorials/tutorialS1_1.ipynb
+++ b/tutorials/tutorialS1_1.ipynb
@@ -65,9 +65,10 @@
     "   $y=0$?\n",
     "\n",
     "3. Plot the variation of the $x$- and $y$-coordinates of the\n",
-    "   projectile with time, from $t=0$ until it hits the ground.\n",
+    "   projectile with time, from $t=0$ until it hits the ground.  Also,\n",
+    "   plot the trajectory (i.e. $y(t)$ vs $x(t)$) of the projectile.\n",
     "\n",
-    "4. Repeat parts 1-3 of the problem if the velocity of the projectile\n",
+    "4. Repeat parts 2 and 3 of the problem if the velocity of the projectile\n",
     "   is at an angle of $60^\\circ$ from the horizontal.  At what angle\n",
     "   will the projectile travel the furthest in the $x$-direction?\n"
    ]
@@ -242,7 +243,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Part 1: Standard reaction enthalpy and Gibbs energy\n",
+    "### Part 1: Standard reaction enthalpy and Gibbs energy\n",
     "\n",
     "The standard enthalpy of reaction $\\Delta H_{\\rm rxn}$ is defined by\n",
     "\\begin{align*}\n",
@@ -278,7 +279,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Part 2: Conversion between mole numbers and mole fractions\n",
+    "### Part 2: Conversion between mole numbers and mole fractions\n",
     "\n",
     "The mole fraction of species $k$, denoted by $x_k$, in a system is given by\n",
     "\\begin{align*}\n",
@@ -320,7 +321,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Part 4: Heat capacity\n",
+    "### Part 3: Heat capacity\n",
     "\n",
     "The heat capacity of the gases can be described by the equation\n",
     "\\begin{align*}\n",
