update to tutorial 2

--- a/tutorials/tutorialS1_2.ipynb
+++ b/tutorials/tutorialS1_2.ipynb
@@ -40,17 +40,18 @@
     ".\n",
     "\\end{align*}\n",
     "\n",
-    "1. Plot the friction factor (on the $y$-axis) against the Reynolds\n",
-    "   number (on the $x$-axis) from ${\\rm Re}=4000$ to $100000$.  Use a\n",
-    "   log scale for both the $x$- and $y$-axes.\n",
     "\n",
-    "2. What is the pressure drop for water (with density $1000\\,{\\rm\n",
+    "1. What is the pressure drop for water (with density $1000\\,{\\rm\n",
     "   kg\\,m^{-3}}$ and viscosity $10^{-3}\\,{\\rm Pa\\,s}$) flowing with a\n",
     "   mean velocity of $3\\,{\\rm m\\,s^{-1}}$ across a $1\\,{\\rm m}$ length\n",
     "   of pipe with an inner diameter of $2\\,{\\rm cm}$?\n",
     "\n",
-    "3. For the system described in part 2, plot the pressure drop as a\n",
-    "   function of the mean velocity.  Make sure you only include values\n",
+    "2. Plot the friction factor (on the $y$-axis) against the Reynolds\n",
+    "   number (on the $x$-axis) from ${\\rm Re}=4000$ to $100000$.  Use a\n",
+    "   log scale for both the $x$- and $y$-axes.\n",
+    "   \n",
+    "3. For the system described in part 1, plot the pressure drop as a\n",
+    "   function of the mean velocity up to $5\\,{\\rm m\\,s}^{-1}$.  Make sure you only include values\n",
     "   of the velocity where ${\\rm Re}>4000$.\n"
    ]
   },
